user controller template
